# ci-cd-semantic-release

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMPARATIF_OUTILS.md  Dockerfile  PROBLEMES_DETECTES.md  README.md  VEILLE_CICD.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci-release.yml  ci.yml  release.yml
app/: database.py  main.py
app/models/: item.py
app/routes/: __init__.py  items.py
app/schemas/: __init__.py  item.py
app/services/: __init__.py  item_service.py
docs/: BRIEF_CI_CD_V2.md  COMPARATIF_OUTILS.md  PROBLEMES_DETECTES.md  VEILLE_CICD.md
tests/: test_items.py  test_service_items.py
