[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.121.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pytest-cov>=7.0.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "detect-secrets>=1.5.0",
    "diagrams>=0.24.4",
    "mypy>=1.18.2",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "safety>=2.3.1",
]

# ========================
# Ruff configuration
# ========================
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI pattern)
    "D203", "D213"  # Docstring warnings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========================
# Mypy configuration
# ========================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# ========================
# Pytest configuration
# ========================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
#addopts = "--strict-markers --cov=app --cov-report=term-missing"
