[project]
name = "training-ci-cd-semantic-release"
version = "1.0.1"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.121.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pytest-cov>=7.0.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "detect-secrets>=1.5.0",
    "diagrams>=0.24.4",
    "mypy>=1.18.2",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "safety>=2.3.1",
]

# ========================
# Ruff configuration
# ========================
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI pattern)
    "D203", "D213"  # Docstring warnings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========================
# Mypy configuration
# ========================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# ========================
# Pytest configuration
# ========================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
#addopts = "--strict-markers --cov=app --cov-report=term-missing"

# ============================================================================
# SEMANTIC RELEASE CONFIGURATION
# ============================================================================
# Configuration pour python-semantic-release qui gère le versioning automatique
# basé sur les Conventional Commits (feat, fix, BREAKING CHANGE, etc.)

[tool.semantic_release]
# Version actuelle du projet (sera mise à jour automatiquement)
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true

# Format des tags Git créés (ex: v1.2.3)
tag_format = "v{version}"


# Template du message de commit pour le bump de version
commit_message = "chore(release): bump version to {version}"

# Génère automatiquement un CHANGELOG.md
build_command = "echo 'No build command needed'"
# =============================================================================
# SEMANTIC RELEASE - CONFIGURATION DES BRANCHES
# =============================================================================
# Définit comment chaque branche gère les releases

# BRANCHE MAIN - Versions stables (production)
[tool.semantic_release.branches.main]
match = "main"                    # Nom de la branche à matcher
prerelease = false                # false = versions stables (1.0.0, 1.1.0, 2.0.0)
# Exemples de versions créées sur main: 1.0.0, 1.1.0, 1.2.0, 2.0.0

# BRANCHE DEVELOP - Versions de pré-release (RC = Release Candidate)
[tool.semantic_release.branches.develop]
match = "develop"                 # Nom de la branche à matcher






# Configuration du changelog
[tool.semantic_release.changelog]
# Template utilisé pour générer le CHANGELOG
template_dir = "templates"
# Exclut certains types de commits du changelog (chore, ci, etc.)
exclude_commit_patterns = [
    "^chore(?:\\(.*\\))?:",
    "^ci(?:\\(.*\\))?:",
    "^docs(?:\\(.*\\))?:",
    "^style(?:\\(.*\\))?:",
    "^test(?:\\(.*\\))?:",
]

# Configuration des règles de versioning (Conventional Commits)
[tool.semantic_release.commit_parser_options]
# Types de commits qui déclenchent une nouvelle version
allowed_tags = [
    "feat",      # Nouvelle fonctionnalité → MINOR version bump (0.1.0 → 0.2.0)
    "fix",       # Correction de bug → PATCH version bump (0.1.0 → 0.1.1)
    "perf",      # Amélioration de performance → PATCH
    "refactor",  # Refactoring → PATCH
]

# Types de commits pour le changelog mais qui ne déclenchent pas de version
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

# Configuration GitHub Release
[tool.semantic_release.remote]
# Type de remote (github, gitlab, gitea)
type = "github"
# Ignore les erreurs de token (utile en développement local)
ignore_token_for_push = false

# Configuration de publication
[tool.semantic_release.publish]
# Désactive la publication sur PyPI (nous utilisons Docker)
upload_to_pypi = false
# Crée une GitHub Release
upload_to_release = true
